PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2022, PHP 8.0.23


04 Aug 2022, PHP 8.0.22

- CLI:
  . Fixed potential overflow for the builtin server via the PHP_CLI_SERVER_WORKERS
    environment variable. (yiyuaner)

- Core:
  . Fixed bug GH-8923 (error_log on Windows can hold the file write lock). (cmb)
  . Fixed bug GH-8995 (WeakMap object reference offset causing TypeError).
    (Tobias Bachert)

- Date:
  . Fixed bug #80047 (DatePeriod doesn't warn with custom DateTimeImmutable).
    (Derick)

- DBA:
  . Fixed LMDB driver hanging when attempting to delete a non-existing key
    (Girgias)

- FPM:
  . Fixed zlog message prepend, free on incorrect address. (Heiko Weber)
  . Fixed possible double free on configuration loading failure. (Heiko Weber).

- GD:
  . Fixed bug GH-8848 (imagecopyresized() error refers to the wrong argument).
    (cmb)

- Intl:
  . Fixed build for ICU 69.x and onwards. (David Carlier)

- OPcache:
  . Fixed bug GH-8847 (PHP hanging infinitly at 100% cpu when check php
    syntaxe of a valid file). (Dmitry)

- Standard:
  . Fixed the crypt_sha256/512 api build with clang > 12. (David Carlier)
  . Uses CCRandomGenerateBytes instead of arc4random_buf on macOs. (David Carlier).

07 Jul 2022, PHP 8.0.21

- Core:
  . Fixed potential use after free in php_binary_init(). (Heiko Weber)

- CLI:
  . Fixed GH-8827 (Intentionally closing std handles no longer possible). (cmb)

- COM:
  . Fixed bug GH-8778 (Integer arithmethic with large number variants fails).
    (cmb)

- Curl:
  . Fixed CURLOPT_TLSAUTH_TYPE is not treated as a string option. (Pierrick)

- Date:
  . Fixed bug #74671 (DST timezone abbreviation has incorrect offset). (Derick)
  . Fixed bug #77243 (Weekdays are calculated incorrectly for negative years).
    (Derick)
  . Fixed bug #78139 (timezone_open accepts invalid timezone string argument).
    (Derick)

- FPM: